src/objects/OrganizationSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>All Organization Settings</description>
    <fields>
        <fullName>CP_URL__c</fullName>
        <description>Customer Portal URL</description>
        <label>CP URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CXE_Meralco_Customer_Community_Profile__c</fullName>
        <label>Meralco Customer Community Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <label>Customer Feedback</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Account_Owner__c</fullName>
        <description>Default owner of newly created Person Account (Individual Accounts) records from Portal</description>
        <label>Default Account Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fb_Linking__c</fullName>
        <label>Fb Linking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FooterLinkToFacebook__c</fullName>
        <label>FooterLinkToFacebook</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FooterLinkToInstagram__c</fullName>
        <label>FooterLinkToInstagram</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FooterLinkToPrivacyPolicy__c</fullName>
        <label>FooterLinkToPrivacyPolicy</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FooterLinkToTwitter__c</fullName>
        <label>FooterLinkToTwitter</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FooterLinkToYoutube__c</fullName>
        <label>FooterLinkToYoutube</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FooterSubmitFeedback__c</fullName>
        <label>FooterSubmitFeedback</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FooterTermsAndCondition__c</fullName>
        <label>FooterTermsAndCondition</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Linking__c</fullName>
        <label>Google Linking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HerokuEndpointGetConsumption__c</fullName>
        <label>HerokuEndpointGetConsumption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heroku_Authorization__c</fullName>
        <label>Heroku Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heroku_Basic_Auth__c</fullName>
        <description>Used for Basic Authentication of Heroku</description>
        <label>Heroku Basic Auth</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heroku_Url__c</fullName>
        <label>Heroku Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HerukoEndpointGetBillsByInvoice__c</fullName>
        <label>HerukoEndpointGetBillsByInvoice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HerukoEndpointGetBills__c</fullName>
        <label>HerukoEndpointGetBills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HerukoEndpointGetPDFUrl__c</fullName>
        <label>HerukoEndpointGetPDFUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HerukoEndpointGetPayments__c</fullName>
        <label>HerukoEndpointGetPayments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HerukoEndpointPaymentbyBillId__c</fullName>
        <label>HerukoEndpointPaymentbyBillId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageInPaperlessBilling__c</fullName>
        <label>ImageInPaperlessBilling</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIniAddsPaymentOptions__c</fullName>
        <label>MIniAddsPaymentOptions</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meralco_Customer_Community_Profile_Plus__c</fullName>
        <label>Meralco Customer Community Profile Plus</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiniAddsBillDashNoti__c</fullName>
        <label>MiniAddsBillDashNoti</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiniAddsBillSummary__c</fullName>
        <label>MiniAddsBillSummary</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiniAddsOnlineBillingFAQs__c</fullName>
        <label>MiniAddsOnlineBillingFAQs</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiniAddsPaperlessBillingTnC__c</fullName>
        <label>MiniAddsPaperlessBillingTnC</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MiniAddsPaperlessBillingUnsubscribe__c</fullName>
        <label>MiniAddsPaperlessBillingUnsubscribe</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MiniAddsViewBillAnytimeAnyWhere__c</fullName>
        <label>MiniAddsViewBillAnytimeAnyWhere</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoveApp__c</fullName>
        <label>MoveApp</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Vault_URL__c</fullName>
        <label>PDF Vault URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Paperless_Billing_Download_Form__c</fullName>
        <defaultValue>&quot;http://www.meralco.com.ph/paperlessbilling&quot;</defaultValue>
        <label>Paperless Billing Download Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Paymaya_Authorization__c</fullName>
        <label>Paymaya Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paymaya_Endpoint__c</fullName>
        <label>Paymaya Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PortalEmailURL__c</fullName>
        <label>PortalEmailURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_And_Conditions_Link__c</fullName>
        <description>Terms and Conditions link</description>
        <label>Terms And Conditions Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signInThruFacebook__c</fullName>
        <label>signInThruFacebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signInThruGoogle__c</fullName>
        <label>signInThruGoogle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Organization Settings</label>
</CustomObject>